# fontnemo

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPENDENCIES.md  PLAN.md  README.md  TODO.md  WORK.md  build.sh  llms.txt  pyproject.toml  test.sh
issues/: 101.md
src/fontnemo/: __init__.py  __main__.py  core.py  utils.py
tests/: __init__.py  create_test_fonts.py  test_core.py  test_utils.py
